# lerobot-ros

./: README.md
lerobot_robot_ros/: README.md  pyproject.toml
lerobot_robot_ros/lerobot_robot_ros/: __init__.py  config.py  config_ros.py  moveit_servo.py  robot.py  ros.py  ros_interface.py  so101_follower_wrapper.py
lerobot_robot_ros/lerobot_robot_ros/scripts/: lerobot_ros_teleoperate.py
lerobot_ros/robots/: ros_interface.py
lerobot_teleoperator_devices/: README.md  pyproject.toml
lerobot_teleoperator_devices/lerobot_teleoperator_devices/: __init__.py  config_gamepad_6dof.py  config_keyboard_joint.py  gamepad_6dof.py  gamepad_6dof_utils.py  keyboard_joint.py
lerobot_teleoperator_ros/: README.md  pyproject.toml
lerobot_teleoperator_ros/lerobot_teleoperator_ros/: keyboard_joint.py
scripts/: record.py  replay.py  teleoperate.py
so101_hardware/: README.md
so101_hardware/include/so101_hardware/: so101_system.hpp
so101_hardware/src/: so101_system.cpp
so101_moveit/config/: motor_calibration.yaml  moveit.rviz  so101_new_calib.ros2_control.xacro  so101_new_calib.urdf.xacro
